# i2cbus

./: Cargo.toml  Jenkinsfile  README.md
ci/: Dockerfile  build-all.sh  build-container.sh
notes/: examples.txt
scripts/: Dockerfile  build-all.sh  build-container.sh  run.sh
src/: http.rs  i2c.rs  lib.rs  main.rs  server.rs
