[package]
name = "i2cbus"
version = "0.1.1"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/i2cbus"
documentation = "https://github.com/packom/i2cbus"
homepage = "https://github.com/packom/i2cbus"
description = "A RESTful HTTP microservice exposing I2C bus control"
readme = "README.md"
keywords = ["i2c","bus","openapi","swagger","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/i2cbus", branch = "master" }

[dependencies]
httpd-util = "0.1.1"
i2cdev2 = "0.4.0"
i2cbus-api = "0.1.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = {version = "0.11"}
hyper-tls = {version = "0.1.2"}
swagger = "1.0.1"
lazy_static = "0.2"
log = "0.3.0"
mime = "0.3.3"
multipart = {version = "0.13.3"}
native-tls = {version = "0.1.4"}
percent-encoding = {version = "1.0.0"}
regex = {version = "0.2"}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.0.4"}
serde_json = {version = "1.0", optional = true}
serde_urlencoded = {version = "0.5.1"}
tokio-core = {version = "0.1.6"}
tokio-proto = {version = "0.1.1"}
tokio-tls = {version = "0.1.3", features = ["tokio-proto"]}
url = {version = "1.5"}
uuid = {version = "0.5", features = ["serde", "v4"]}
error-chain = "0.12"
nix = "0.11.0"

[dev-dependencies]
clap = "2.25"
error-chain = "0.12"

